fix: title extraction in import pipeline
- extractBracedContent(): handles nested braces and \cmd[opt]{...} patterns
- Falls back to arXiv API title when TeX extraction yields 'Untitled Paper'
- Fix 1610-10099v2 metadata/html: Neural Machine Translation in Linear Time

--- a/docs/1610-10099v2/metadata.yaml
+++ b/docs/1610-10099v2/metadata.yaml
@@ -1,5 +1,5 @@
-title: Untitled Paper
-short_title: Untitled Paper
+title: Neural Machine Translation in Linear Time
+short_title: Neural Machine Translation in Linear Time
 type: journal-article
 authors: []
 date: '2026-03-02'
