fix: PDF-only detection + MoE markdown rendering
- Extend isPdfOnly to also catch \includepdf (Adam paper pattern)
- Re-import 1412.6980 (Adam): now shows title + abstract + embedded PDF
- Fix 1701-06538 (MoE): convert ### markdown headers to <h2>/<h3>,
  wrap bare text in <p>, fix \Large in title

--- a/docs/1701-06538/metadata.yaml
+++ b/docs/1701-06538/metadata.yaml
@@ -1,7 +1,7 @@
 title: |-
   \Large Outrageously Large Neural Networks: 
   The Sparsely-Gated Mixture-of-Experts Layer
-short_title: \Large Outrageously Large Neural Network…
+short_title: Outrageously Large Neural Network…
 type: journal-article
 authors: []
 date: '2026-03-02'
