--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "import": "node agents/import-agent/index.mjs",
         "electron": "electron .",
         "electron-dev": "electron . --dev",
-        "test": "node tests/test-smoke.js"
+        "test": "node tests/test-smoke.js",
+        "test:e2e": "npx playwright test --reporter=list"
     },
     "repository": {
         "type": "git",
@@ -38,10 +39,11 @@
         "katex": "^0.16.33",
         "marked": "^17.0.3",
         "openai": "^6.25.0",
-        "playwright": "^1.58.2",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "electron": "^35.1.5"
+        "@playwright/test": "^1.58.2",
+        "electron": "^35.1.5",
+        "playwright": "^1.58.2"
     }
 }
