fix: LaTeX brace-group formatting and KaTeX macro rendering
- arxiv-pipeline + tex2html: handle {\bf}, {\it}, {\em}, {\tt}, {\rm}
  brace-group forms → convert to <strong>/<em>/<code>/plain
- Patch all 15 existing imported paper HTMLs with same fix
- render-math: sanitize macro defs containing $, \mbox{\boldmath{...}}
  → convert to \boldsymbol{} which KaTeX supports
- render-math: replace bare < > in math with \lt \gt to prevent HTML parsing
- Re-import 1508-04025: katex errors 21 → 2

--- a/docs/1409-0473/metadata.yaml
+++ b/docs/1409-0473/metadata.yaml
@@ -1,5 +1,5 @@
-title: Neural Machine Translation  by Jointly Learning to Align and Translate
-short_title: Neural Machine Translation  by Jointly L…
+title: Neural Machine Translation by Jointly Learning to Align and Translate
+short_title: Neural Machine Translation by Jointly Le…
 type: journal-article
 authors:
   - given: Dzmitry Bahdanau Jacobs University
