--- a/docs/1409-3215/metadata.yaml
+++ b/docs/1409-3215/metadata.yaml
@@ -1,5 +1,5 @@
-title: Sequence to Sequence Learningwith Neural Networks
-short_title: Sequence to Sequence Learningwith Neural…
+title: Sequence to Sequence Learning with Neural Networks
+short_title: Sequence to Sequence Learning with Neura…
 type: journal-article
 authors: []
 date: '2026-03-02'
