--- a/docs/1412-3555/metadata.yaml
+++ b/docs/1412-3555/metadata.yaml
@@ -1,5 +1,5 @@
-title: Empirical Evaluation of  Gated Recurrent Neural Networks  on Sequence Modeling
-short_title: Empirical Evaluation of  Gated Recurrent…
+title: Empirical Evaluation of Gated Recurrent Neural Networks \\ on Sequence Modeling
+short_title: Empirical Evaluation of Gated Recurrent …
 type: journal-article
 authors: []
 date: '2026-03-02'
