--- a/docs/1701-06538/metadata.yaml
+++ b/docs/1701-06538/metadata.yaml
@@ -1,7 +1,5 @@
-title: |-
-  \Large Outrageously Large Neural Networks: 
-  The Sparsely-Gated Mixture-of-Experts Layer
-short_title: Outrageously Large Neural Network…
+title: 'Outrageously Large Neural Networks: The Sparsely-Gated Mixture-of-Experts Layer'
+short_title: 'Outrageously Large Neural Networks: The …'
 type: journal-article
 authors: []
 date: '2026-03-02'
