--- a/docs/1602-02410/metadata.yaml
+++ b/docs/1602-02410/metadata.yaml
@@ -1,5 +1,5 @@
-title: Untitled Paper
-short_title: Untitled Paper
+title: Exploring the Limits of Language Modeling
+short_title: Exploring the Limits of Language Modelin…
 type: journal-article
 authors: []
 date: '2026-03-02'
@@ -9,7 +9,7 @@ arxiv_id: '1602.02410'
 archive: arxiv
 archive_url: https://arxiv.org/abs/1602.02410
 source: arxiv-pipeline
-pipeline_version: '2.1'
+pipeline_version: '2.0'
 tags:
   - auto-imported
   - arxiv-pipeline
@@ -27,6 +27,6 @@ files:
     primary: true
 variable_count: 0
 equation_count: 4
-reference_count: 53
+reference_count: 0
 sections: 7
 figures: 2
