--- a/docs/1602-03032/metadata.yaml
+++ b/docs/1602-03032/metadata.yaml
@@ -1,5 +1,5 @@
-title: Untitled Paper
-short_title: Untitled Paper
+title: Associative Long Short-Term Memory
+short_title: Associative Long Short-Term Memory
 type: journal-article
 authors: []
 date: '2026-03-02'
@@ -9,7 +9,7 @@ arxiv_id: '1602.03032'
 archive: arxiv
 archive_url: https://arxiv.org/abs/1602.03032
 source: arxiv-pipeline
-pipeline_version: '2.1'
+pipeline_version: '2.0'
 tags:
   - auto-imported
   - arxiv-pipeline
